Fix overflow issue.

--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -1,3 +1,7 @@
+.main {
+  overflow: hidden;
+}
+
 .categories {
   list-style-type: none;
   display: grid;
@@ -5,6 +9,7 @@
   padding: 0;
   grid-template-columns: 50% 50%;
   grid-auto-rows: max-content;
+  overflow-y: auto;
 }
 
 .header {
